--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -22,10 +22,11 @@
 # ================================
 
 #+PROPERTY: header-args:python+ :preamble "import sys\nsys.path.extend(['../src','../test'])"
-#+PROPERTY: header-args:python+ :results value verbatim pp silent
-#+PROPERTY: header-args:python+ :exports code
-#+PROPERTY: header-args:python+ :mkdirp yes
-#+PROPERTY: header-args:python+ :padline no
+#+PROPERTY: header-args:python+ :eval     no-export
+#+PROPERTY: header-args:python+ :results  value verbatim pp silent
+#+PROPERTY: header-args:python+ :exports  code
+#+PROPERTY: header-args:python+ :mkdirp   yes
+#+PROPERTY: header-args:python+ :padline  no
 #+PROPERTY: header-args:python+ :comments link
 
 * Preface
