--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -24,7 +24,6 @@
 #+PROPERTY: header-args:python+ :preamble "import sys\nsys.path.extend(['../src','../test'])"
 #+PROPERTY: header-args:python+ :eval     no-export
 #+PROPERTY: header-args:python+ :results  value verbatim pp silent
-#+PROPERTY: header-args:python+ :exports  code
 #+PROPERTY: header-args:python+ :mkdirp   yes
 #+PROPERTY: header-args:python+ :padline  no
 #+PROPERTY: header-args:python+ :comments link
@@ -162,16 +161,18 @@ resolution. See section [[Loading Input Data
 (pyretechnics.space_time_cube)]] for implementation details.
 
 * Loading Input Data (pyretechnics.space_time_cube)
-  :PROPERTIES:
-  :header-args:python+: :session *pyretechnics.space_time_cube*
-  :header-args:python+: :tangle  ../src/pyretechnics/space_time_cube.py
-  :END:
+** For Developers
+   :PROPERTIES:
+   :header-args:python+: :session *pyretechnics.space_time_cube*
+   :header-args:python+: :tangle  ../src/pyretechnics/space_time_cube.py
+   :header-args:python+: :exports code
+   :END:
 
 The following sections define Python classes that construct 3D
 space-time cubes corresponding to the data model described above for
 various types of input datasets.
 
-** Utility Functions
+*** Utility Functions
 
 #+name: space-time-cube-imports
 #+begin_src python
@@ -206,7 +207,7 @@ def maybe_repeat_array(array, axis_repetitions):
             return np.repeat(array, repetitions, axis)
 #+end_src
 
-** SpaceTimeCube Class
+*** SpaceTimeCube Class
 
 When an input dataset is already loaded into memory as either a single
 scalar value or a 1D, 2D, or 3D array of values, it can be made
@@ -467,18 +468,71 @@ class SpaceTimeCube:
             delattr(self, "cube")
 #+end_src
 
-** LazySpaceTimeCube Class
+*** LazySpaceTimeCube Class
+
+# TODO: Update this text
+
+In order to avoid the need to fully load all of the 3D space-time
+cube's environmental datasets into memory at the beginning of a fire
+behavior simulation, Pyretechnics implements a lazy-loading mechanism
+that works as follows:
+
+1. The 3D space-time cube is assigned a *simulation shape* $(T_s, Y_s,
+   X_s)$, which describes the number of timesteps, rows, and columns
+   it contains. This must be an exact multiple (in every dimension) of
+   the *layer shapes* described below.
+
+2. Each input dataset is assigned a *layer shape* $(T_l, Y_l, X_l)$,
+   which describes the number of timesteps, rows, and columns it
+   contains.
+
+3. Each input dataset is assigned a *chunk shape* $(T_c, Y_c,
+   X_c)$, which describes the number of timesteps, rows, and columns
+   to be loaded from the corresponding layer when requesting a new
+   chunk of data within its spatio-temporal extent. All chunk
+   dimensions must exactly divide their corresponding layer
+   dimensions.
+
+4. Each input dataset is assigned a *chunk cache* with shape
+   $(T_l/T_c, Y_l/Y_c, X_l/X_c)$. This is represented in memory as a
+   3D array of pointers, initialized to nulls.
+
+5. Each input dataset is assigned a 3D look-up function to be used in
+   fire behavior calculations.
+
+   1. Whenever this function is called on a space-time coordinate
+      which has no value in the *chunk cache*, a call is first made
+      automatically to load the array chunk containing this coordinate
+      from the underlying input dataset into the *chunk cache*, and
+      then the coordinate value is looked up and returned.
+
+   2. Whenever this function is called on a space-time coordinate
+      which has a value in the *chunk cache*, it is looked up and
+      returned.
+
+The net effect of this chunked data model approach is that
+Pyretechnics only needs to load into memory those space-time chunks
+which are intersected by the expanding conical burn scar. In
+simulations of fires that are small relative to the extent of the full
+3D space-time environment, these memory savings may be substantial and
+may make it possible to run simulations over larger extents and/or
+finer resolutions than have been used previously.
 
 #+name: lazy-space-time-cube-class
 #+begin_src python
 class LazySpaceTimeCube:
     """
-    TODO: Add docstring.
+    Create an object that represents a 3D array with dimensions (T,Y,X) given by cube_shape.
+    Internally, data is stored as an initially empty 3D array of SpaceTimeCube objects.
+    Whenever a point value or contiguous space-time region of values is requested, identify
+    which SpaceTimeCubes contain the requested coordinates, load them into the cache array
+    by calling load_subcube for any that are not already present, request the values from
+    these SpaceTimeCubes, combine them together if necessary, and return the resulting scalar
+    value or array to the caller.
     """
     def __init__(self, cube_shape, subcube_shape, load_subcube):
         """
-        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the cube in the first timestep.
-        NOTE: cube_shape >= subcube_shape
+        NOTE: The resolutions in cube_shape must be exact multiples of those in subcube_shape.
         """
         # Ensure that cube_shape and subcube_shape both contain 3 values or throw an error
         (cube_bands, cube_rows, cube_cols) = cube_shape
@@ -505,7 +559,9 @@ class LazySpaceTimeCube:
 
     def __getOrLoadSubcube(cache_t, cache_y, cache_x):
         """
-        Returns a SpaceTimeCube.
+        Return the SpaceTimeCube stored at self.cache[cache_t, cache_y, cache_x] if it
+        has already been loaded. Otherwise, call self.load_subcube to load it, store
+        it in self.cache, and return it.
         """
         subcube = self.cache[cache_t, cache_y, cache_x]
         if subcube:
@@ -518,7 +574,11 @@ class LazySpaceTimeCube:
 
     def get(self, t, y, x):
         """
-        Returns a scalar value.
+        Return the scalar value at index (t,y,x) by translating these cube coordinates
+        to cache and subcube coordinates, loading the matching subcube into the cache grid
+        if not already present, and looking up the value within this subcube.
+
+        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         """
         (subcube_bands, subcube_rows, subcube_cols) = self.subcube_shape
         (cache_t, subcube_t) = divmod(t, subcube_bands)
@@ -632,210 +692,327 @@ class LazySpaceTimeCube:
                          + "You probably don't want to do this anyway.")
 #+end_src
 
-# TODO: Incorporate the following sections into the SpaceTimeCube class model defined above.
+** For Users
+   :PROPERTIES:
+   :header-args:python+: :session *examples:pyretechnics.space_time_cube*
+   :header-args:python+: :exports both
+   :END:
 
-** Lazy Loading of Space-Time Chunks
+In the following sections, we will use functions from [[https://pypi.org/project/numpy/][numpy]] and the
+Python standard library to construct arrays of different resolutions
+in memory to use in our =SpaceTimeCube= and =LazySpaceTimeCube=
+examples. In many real world applications, this array data will
+probably be read in from files or databases using Python libraries
+such as [[https://pypi.org/project/rasterio/][rasterio]] or [[https://pypi.org/project/psycopg2/][psycopg2]]. All examples should apply equally well
+in either case.
 
-In order to avoid the need to fully load all of the 3D space-time
-cube's environmental datasets into memory at the beginning of a fire
-behavior simulation, Pyretechnics implements a lazy-loading mechanism
-that works as follows:
+*** How to Use SpaceTimeCube
 
-1. The 3D space-time cube is assigned a *simulation shape* $(T_s, Y_s,
-   X_s)$, which describes the number of timesteps, rows, and columns
-   it contains. This must be an exact multiple (in every dimension) of
-   the *layer shapes* described below.
+**** Create a SpaceTimeCube from 0D, 1D, 2D, or 3D Input Data
 
-2. Each input dataset is assigned a *layer shape* $(T_l, Y_l, X_l)$,
-   which describes the number of timesteps, rows, and columns it
-   contains.
-
-3. Each input dataset is assigned a *chunk shape* $(T_c, Y_c,
-   X_c)$, which describes the number of timesteps, rows, and columns
-   to be loaded from the corresponding layer when requesting a new
-   chunk of data within its spatio-temporal extent. All chunk
-   dimensions must exactly divide their corresponding layer
-   dimensions.
-
-4. Each input dataset is assigned a *chunk cache* with shape
-   $(T_l/T_c, Y_l/Y_c, X_l/X_c)$. This is represented in memory as a
-   3D array of pointers, initialized to nulls.
-
-5. Each input dataset is assigned a 3D look-up function to be used in
-   fire behavior calculations.
-
-   1. Whenever this function is called on a space-time coordinate
-      which has no value in the *chunk cache*, a call is first made
-      automatically to load the array chunk containing this coordinate
-      from the underlying input dataset into the *chunk cache*, and
-      then the coordinate value is looked up and returned.
-
-   2. Whenever this function is called on a space-time coordinate
-      which has a value in the *chunk cache*, it is looked up and
-      returned.
-
-The net effect of this chunked data model approach is that
-Pyretechnics only needs to load into memory those space-time chunks
-which are intersected by the expanding conical burn scar. In
-simulations of fires that are small relative to the extent of the full
-3D space-time environment, these memory savings may be substantial and
-may make it possible to run simulations over larger extents and/or
-finer resolutions than have been used previously.
-
-** Lazy-Loading Multi-Resolution Array Lookup Functions
-
-#+name: lazy-array-lookup-functions
-#+begin_src python :tangle ../src/pyretechnics/lazy_array.py
+#+name: space-time-cube-create
+#+begin_src python
 import numpy as np
+from pyretechnics.space_time_cube import SpaceTimeCube
 
-#==============================================================
-# Lazy-Loading Multi-Resolution Array Lookup Functions
-#==============================================================
+cube_shape = (
+    240,  # bands: 10 days
+    1000, # rows: 1 thousand
+    1000, # cols: 1 thousand
+)
 
-def translate_coords_2d(coords_2d, simulation_shape_2d, layer_shape_2d, chunk_shape_2d):
-    """
-    Given row y and column x on the simulation grid, return chunk
-    row cy, chunk column cx, subchunk row c_y, and subchunk column c_x on
-    the chunk grid.
-    NOTE: (y,x) = (0,0) is the upper-left corner of the array.
-    NOTE: simulation_shape_2d >= layer_shape_2d >= chunk_shape_2d
-    """
-    (y, x) = coords_2d
-    (simulation_rows, simulation_cols) = simulation_shape_2d
-    (layer_rows, layer_cols) = layer_shape_2d
-    (chunk_rows, chunk_cols) = chunk_shape_2d
-    ly = y // (simulation_rows // layer_rows)
-    lx = x // (simulation_cols // layer_cols)
-    cy  = ly // chunk_rows
-    cx  = lx // chunk_cols
-    c_y = ly % chunk_rows
-    c_x = lx % chunk_cols
-    return (cy, cx, c_y, c_x)
+# Constant Data: foliar moisture = 70% everywhere
+foliar_moisture = 0.7
+constant_cube = SpaceTimeCube(cube_shape, foliar_moisture)
 
-def translate_coords_3d(coords_3d, simulation_shape_3d, layer_shape_3d, chunk_shape_3d):
-    """
-    Given band z, row y, and column x on the simulation grid,
-    return chunk band cz, chunk row cy, chunk column cx, subchunk band
-    c_z, subchunk row c_y, and subchunk column c_x on the chunk grid.
-    NOTE: (z,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
-    NOTE: simulation_shape_3d >= layer_shape_3d >= chunk_shape_3d
-    """
-    (z, y, x) = coords_3d
-    (simulation_bands, simulation_rows, simulation_cols) = simulation_shape_3d
-    (layer_bands, layer_rows, layer_cols) = layer_shape_3d
-    (chunk_bands, chunk_rows, chunk_cols) = chunk_shape_3d
-    lz = z // (simulation_bands // layer_bands)
-    ly = y // (simulation_rows // layer_rows)
-    lx = x // (simulation_cols // layer_cols)
-    cz  = lz // chunk_bands
-    cy  = ly // chunk_rows
-    cx  = lx // chunk_cols
-    c_z = lz % chunk_bands
-    c_y = ly % chunk_rows
-    c_x = lx % chunk_cols
-    return (cz, cy, cx, c_z, c_y, c_x)
+# Temporal Data: 24-hour burn period with ramp up and ramp down for 10 days
+spread_rate_adjustments = ([0] * 6 + [0.33, 0.66] + [1] * 12 + [0.66, 0.33] + [0] * 2) * 10
+time_series_cube = SpaceTimeCube(cube_shape, spread_rate_adjustments)
 
-def get_or_load_chunk_2d(chunk_cache_2d, cy, cx, load_chunk_2d):
-    """
-    Checks whether chunk_cache_2d contains chunk (cy, cx). If so,
-    return it. Otherwise, call load_chunk_2d(cy, cx) to retrieve it,
-    store it in chunk_cache_2d, and return it.
-    """
-    chunk_2d = chunk_cache_2d[cy, cx]
-    if (type(chunk_2d) == np.ndarray):
-        return chunk_2d
-    else:
-        chunk_2d = load_chunk_2d(cy, cx)
-        chunk_cache_2d[cy, cx] = chunk_2d
-        return chunk_2d
+# Spatial Data: 2D elevation raster with 1000 x 1000 cells
+elevation_raster = np.random.normal(500, 100, 1000000).astype("int").reshape(1000,1000)
+spatial_cube = SpaceTimeCube(cube_shape, elevation_raster)
 
-def get_or_load_chunk_3d(chunk_cache_3d, cz, cy, cx, load_chunk_3d):
-    """
-    Checks whether chunk_cache_3d contains chunk (cz, cy, cx). If so,
-    return it. Otherwise, call load_chunk_3d(cz, cy, cx) to retrieve it,
-    store it in chunk_cache_3d, and return it.
-    """
-    chunk_3d = chunk_cache_3d[cz, cy, cx]
-    if (type(chunk_3d) == np.ndarray):
-        return chunk_3d
-    else:
-        chunk_3d = load_chunk_3d(cz, cy, cx)
-        chunk_cache_3d[cz, cy, cx] = chunk_3d
-        return chunk_3d
-
-def at_coords_2d(coords_2d, simulation_shape_2d, layer_shape_2d, chunk_shape_2d, chunk_cache_2d, load_chunk_2d):
-    """
-    Given row y and column x on the simulation grid, return the
-    value at that index in the underlying chunk cache.
-    NOTE: (y,x) = (0,0) is the upper-left corner of the array.
-    """
-    (cy, cx, c_y, c_x) = translate_coords_2d(coords_2d, simulation_shape_2d, layer_shape_2d, chunk_shape_2d)
-    chunk_2d = get_or_load_chunk_2d(chunk_cache_2d, cy, cx, load_chunk_2d)
-    return chunk_2d[c_y, c_x]
-
-def at_coords_3d(coords_3d, simulation_shape_3d, layer_shape_3d, chunk_shape_3d, chunk_cache_3d, load_chunk_3d):
-    """
-    Given band z, row y, and column x on the simulation grid,
-    return the value at that index in the underlying chunk cache.
-    NOTE: (z,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
-    """
-    (cz, cy, cx, c_z, c_y, c_x) = translate_coords_3d(coords_3d, simulation_shape_3d, layer_shape_3d, chunk_shape_3d)
-    chunk_3d = get_or_load_chunk_3d(chunk_cache_3d, cz, cy, cx, load_chunk_3d)
-    return chunk_3d[c_z, c_y, c_x]
-
-#==============================================================
-# Constructor: Returns a 2D/3D Lookup Function for One Array
-#==============================================================
-
-def make_lookup_fn_2d(simulation_shape_2d, layer_shape_2d, chunk_shape_2d, load_chunk_2d):
-    """
-    Given the array shapes of the simulation space (|Y|,|X|), the
-    underlying data layer (|LY|,|LX|), and a single chunk within the
-    chunk cache (|CY|,|CX|) as well as a function to load one chunk
-    on demand, return a closure that will retrieve the value from the
-    underlying data layer corresponding to coordinate (y,x) in the
-    simulation space. Chunks will be loaded on demand using load_chunk_2d.
-    NOTE: (y,x) = (0,0) is the upper-left corner of the array.
-    NOTE: simulation_shape_2d >= layer_shape_2d >= chunk_shape_2d
-    """
-    (layer_rows, layer_cols) = layer_shape_2d
-    (chunk_rows, chunk_cols) = chunk_shape_2d
-    chunk_cache_2d = np.empty((layer_rows // chunk_rows,
-                               layer_cols // chunk_cols),
-                              dtype=object)
-    return lambda y, x: at_coords_2d((y, x),
-                                     simulation_shape_2d,
-                                     layer_shape_2d,
-                                     chunk_shape_2d,
-                                     chunk_cache_2d,
-                                     load_chunk_2d)
-
-def make_lookup_fn_3d(simulation_shape_3d, layer_shape_3d, chunk_shape_3d, load_chunk_3d):
-    """
-    Given the array shapes of the simulation space (|Z|,|Y|,|X|), the
-    underlying data layer (|LZ|,|LY|,|LX|), and a single chunk within the
-    chunk cache (|CZ|,|CY|,|CX|) as well as a function to load one chunk
-    on demand, return a closure that will retrieve the value from the
-    underlying data layer corresponding to coordinate (z,y,x) in the
-    simulation space. Chunks will be loaded on demand using load_chunk_3d.
-    NOTE: (z,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
-    NOTE: simulation_shape_3d >= layer_shape_3d >= chunk_shape_3d
-    """
-    (layer_bands, layer_rows, layer_cols) = layer_shape_3d
-    (chunk_bands, chunk_rows, chunk_cols) = chunk_shape_3d
-    chunk_cache_3d = np.empty((layer_bands // chunk_bands,
-                               layer_rows // chunk_rows,
-                               layer_cols // chunk_cols),
-                              dtype=object)
-    return lambda z, y, x: at_coords_3d((z, y, x),
-                                        simulation_shape_3d,
-                                        layer_shape_3d,
-                                        chunk_shape_3d,
-                                        chunk_cache_3d,
-                                        load_chunk_3d)
+# Spatio-Temporal Data: 3D daily max wind speed raster with 10 (days) x 100 x 100 cells
+wind_speed_raster = np.random.normal(30, 5, 100000).astype("int").reshape(10,100,100)
+spatiotemporal_cube = SpaceTimeCube(cube_shape, wind_speed_raster)
 #+end_src
 
-** Lazy Array Usage Examples
+**** Retrieve a Scalar Value at a Space-Time Coordinate
+
+#+name: space-time-cube-get-point
+#+begin_src python :results output replace
+# Space-Time Coordinate
+band = 12
+row  = 100
+col  = 100
+
+print("Value from Constant Data: Foliar Moisture")
+print(constant_cube.get(band, row, col), "\n")
+
+print("Value from Time Series Data: Spread Rate Adjustment")
+print(time_series_cube.get(band, row, col), "\n")
+
+print("Value from Spatial Data: Elevation")
+print(spatial_cube.get(band, row, col), "\n")
+
+print("Value from Spatio-Temporal Data: Wind Speed")
+print(spatiotemporal_cube.get(band, row, col))
+#+end_src
+
+#+RESULTS: space-time-cube-get-point
+#+begin_example
+Value from Constant Data: Foliar Moisture
+0.7 
+
+Value from Time Series Data: Spread Rate Adjustment
+1.0 
+
+Value from Spatial Data: Elevation
+354 
+
+Value from Spatio-Temporal Data: Wind Speed
+30
+#+end_example
+
+**** Retrieve a Time Series at a Spatial Coordinate
+
+#+name: space-time-cube-get-time-series
+#+begin_src python :results output replace
+# Space-Time Coordinates
+band_range = (18,29)
+row        = 100
+col        = 100
+
+print("Time Series from Constant Data: Foliar Moisture")
+print(constant_cube.getTimeSeries(band_range, row, col), "\n")
+
+print("Time Series from Time Series Data: Spread Rate Adjustment")
+print(time_series_cube.getTimeSeries(band_range, row, col), "\n")
+
+print("Time Series from Spatial Data: Elevation")
+print(spatial_cube.getTimeSeries(band_range, row, col), "\n")
+
+print("Time Series from Spatio-Temporal Data: Wind Speed")
+print(spatiotemporal_cube.getTimeSeries(band_range, row, col))
+#+end_src
+
+#+RESULTS: space-time-cube-get-time-series
+#+begin_example
+Time Series from Constant Data: Foliar Moisture
+[0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7] 
+
+Time Series from Time Series Data: Spread Rate Adjustment
+[1.   1.   0.66 0.33 0.   0.   0.   0.   0.   0.   0.   0.  ] 
+
+Time Series from Spatial Data: Elevation
+[354 354 354 354 354 354 354 354 354 354 354 354] 
+
+Time Series from Spatio-Temporal Data: Wind Speed
+[30 30 30 30 30 30 27 27 27 27 27 27]
+#+end_example
+
+**** Retrieve a Spatial Plane at a Temporal Coordinate
+
+#+name: space-time-cube-get-spatial-plane
+#+begin_src python :results output replace
+# Space-Time Coordinates
+band      = 12
+row_range = (95,104)
+col_range = (95,104)
+
+print("Spatial Plane from Constant Data: Foliar Moisture")
+print(constant_cube.getSpatialPlane(band, row_range, col_range), "\n")
+
+print("Spatial Plane from Time Series Data: Spread Rate Adjustment")
+print(time_series_cube.getSpatialPlane(band, row_range, col_range), "\n")
+
+print("Spatial Plane from Spatial Data: Elevation")
+print(spatial_cube.getSpatialPlane(band, row_range, col_range), "\n")
+
+print("Spatial Plane from Spatio-Temporal Data: Wind Speed")
+print(spatiotemporal_cube.getSpatialPlane(band, row_range, col_range))
+#+end_src
+
+#+RESULTS: space-time-cube-get-spatial-plane
+#+begin_example
+Spatial Plane from Constant Data: Foliar Moisture
+[[0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+ [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]] 
+
+Spatial Plane from Time Series Data: Spread Rate Adjustment
+[[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
+ [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]] 
+
+Spatial Plane from Spatial Data: Elevation
+[[409 623 475 522 519 460 349 496 436 491]
+ [408 588 372 415 499 550 577 455 621 531]
+ [433 419 561 530 443 500 535 621 578 415]
+ [583 459 665 627 596 498 456 518 628 628]
+ [461 627 627 559 328 568 366 492 461 633]
+ [522 438 638 334 582 354 653 452 535 332]
+ [467 395 387 479 629 566 590 311 449 488]
+ [463 468 233 542 527 401 448 485 454 378]
+ [393 711 495 438 393 458 595 501 509 385]
+ [579 430 425 730 457 271 492 476 386 374]] 
+
+Spatial Plane from Spatio-Temporal Data: Wind Speed
+[[24 24 24 24 24 30 30 30 30 30]
+ [24 24 24 24 24 30 30 30 30 30]
+ [24 24 24 24 24 30 30 30 30 30]
+ [24 24 24 24 24 30 30 30 30 30]
+ [24 24 24 24 24 30 30 30 30 30]
+ [32 32 32 32 32 30 30 30 30 30]
+ [32 32 32 32 32 30 30 30 30 30]
+ [32 32 32 32 32 30 30 30 30 30]
+ [32 32 32 32 32 30 30 30 30 30]
+ [32 32 32 32 32 30 30 30 30 30]]
+#+end_example
+
+**** Retrieve a Subcube within a Space-Time Region
+
+#+name: space-time-cube-get-subcube
+#+begin_src python :results output replace
+# Space-Time Coordinates
+band_range = (23,24)
+row_range  = (95,104)
+col_range  = (95,104)
+
+print("Subcube from Constant Data: Foliar Moisture")
+print(constant_cube.getSubcube(band_range, row_range, col_range), "\n")
+
+print("Subcube from Time Series Data: Spread Rate Adjustment")
+print(time_series_cube.getSubcube(band_range, row_range, col_range), "\n")
+
+print("Subcube from Spatial Data: Elevation")
+print(spatial_cube.getSubcube(band_range, row_range, col_range), "\n")
+
+print("Subcube from Spatio-Temporal Data: Wind Speed")
+print(spatiotemporal_cube.getSubcube(band_range, row_range, col_range))
+#+end_src
+
+#+RESULTS: space-time-cube-get-subcube
+#+begin_example
+Subcube from Constant Data: Foliar Moisture
+[[[0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]]
+
+ [[0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]
+  [0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7 0.7]]] 
+
+Subcube from Time Series Data: Spread Rate Adjustment
+[[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]
+
+ [[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
+  [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]] 
+
+Subcube from Spatial Data: Elevation
+[[[409 623 475 522 519 460 349 496 436 491]
+  [408 588 372 415 499 550 577 455 621 531]
+  [433 419 561 530 443 500 535 621 578 415]
+  [583 459 665 627 596 498 456 518 628 628]
+  [461 627 627 559 328 568 366 492 461 633]
+  [522 438 638 334 582 354 653 452 535 332]
+  [467 395 387 479 629 566 590 311 449 488]
+  [463 468 233 542 527 401 448 485 454 378]
+  [393 711 495 438 393 458 595 501 509 385]
+  [579 430 425 730 457 271 492 476 386 374]]
+
+ [[409 623 475 522 519 460 349 496 436 491]
+  [408 588 372 415 499 550 577 455 621 531]
+  [433 419 561 530 443 500 535 621 578 415]
+  [583 459 665 627 596 498 456 518 628 628]
+  [461 627 627 559 328 568 366 492 461 633]
+  [522 438 638 334 582 354 653 452 535 332]
+  [467 395 387 479 629 566 590 311 449 488]
+  [463 468 233 542 527 401 448 485 454 378]
+  [393 711 495 438 393 458 595 501 509 385]
+  [579 430 425 730 457 271 492 476 386 374]]] 
+
+Subcube from Spatio-Temporal Data: Wind Speed
+[[[24 24 24 24 24 30 30 30 30 30]
+  [24 24 24 24 24 30 30 30 30 30]
+  [24 24 24 24 24 30 30 30 30 30]
+  [24 24 24 24 24 30 30 30 30 30]
+  [24 24 24 24 24 30 30 30 30 30]
+  [32 32 32 32 32 30 30 30 30 30]
+  [32 32 32 32 32 30 30 30 30 30]
+  [32 32 32 32 32 30 30 30 30 30]
+  [32 32 32 32 32 30 30 30 30 30]
+  [32 32 32 32 32 30 30 30 30 30]]
+
+ [[34 34 34 34 34 35 35 35 35 35]
+  [34 34 34 34 34 35 35 35 35 35]
+  [34 34 34 34 34 35 35 35 35 35]
+  [34 34 34 34 34 35 35 35 35 35]
+  [34 34 34 34 34 35 35 35 35 35]
+  [30 30 30 30 30 27 27 27 27 27]
+  [30 30 30 30 30 27 27 27 27 27]
+  [30 30 30 30 30 27 27 27 27 27]
+  [30 30 30 30 30 27 27 27 27 27]
+  [30 30 30 30 30 27 27 27 27 27]]]
+#+end_example
+
+*** How to Use LazySpaceTimeCube
+
+#+name: lazy-space-time-cube-examples
+#+begin_src python
+import numpy as np
+from pyretechnics.space_time_cube import LazySpaceTimeCube
+
+#+end_src
+
+
+
 
 #+name: lazy-array-examples
 #+begin_src python :tangle ../test/pyretechnics_test/test_lazy_array.py
@@ -4046,3 +4223,9 @@ def min_to_day(minutes):
     """Convert minutes to days."""
     return minutes / 1440.0
 #+end_src
+
+** SpaceTimeCube and LazySpaceTimeCube Tests (pyretechnics_test.test_space_time_cube)
+   :PROPERTIES:
+   :header-args:python+: :session *pyretechnics_test.test_space_time_cube*
+   :header-args:python+: :tangle  ../test/pyretechnics_test/test_space_time_cube.py
+   :END:
